--- a/themes/InterDead/layouts/partials/menu-modal.html
+++ b/themes/InterDead/layouts/partials/menu-modal.html
@@ -8,6 +8,7 @@
 <div
   class="gm-modal gm-menuModal"
   data-modal="menu"
+  data-modal-scroll="lock"
   id="gm-menuModal"
   role="dialog"
   aria-modal="true"
@@ -26,53 +27,57 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <p class="gm-modal__hint">{{ i18n "menu.modal.hint" }}</p>
-    <ul class="gm-modal__options gm-menuModal__options" role="list">
-      {{- range $navigation }}
-        {{- $id := .id | default "" -}}
-        {{- $labelKey := .i18nKey | default .label | default "" -}}
-        {{- $label := cond (ne $labelKey "") (i18n $labelKey) "" -}}
-        {{- $href := .url | default "" | relLangURL -}}
-        {{- $targetId := .targetId | default "" -}}
-        {{- $targetAttr := .target | default "" -}}
-        {{- $bodyHref := cond (and $.IsHome (ne $targetId "")) (printf "#%s" $targetId) $href -}}
-        {{- $disableBody := and (not $.IsHome) (and (ne $id "") (eq $id $currentNavId)) -}}
-        {{- $isCurrent := $disableBody -}}
-      <li>
-        <div
-          class="gm-modal__option gm-menuModal__option{{ if $isCurrent }} gm-modal__option--current gm-menuModal__option--current{{ end }}"
-          data-menu-option
-          data-menu-url="{{ $href }}"
-          {{- if $targetId }} data-menu-target="{{ $targetId }}"{{ end }}
-          {{- if $disableBody }} aria-disabled="true"{{ end }}
-          {{- if $isCurrent }} data-menu-active="true" data-menu-active-label="{{ i18n "lang.modal.current" }}"{{ end }}
-        >
-          <a
-            class="gm-modal__optionBody"
-            href="{{ $bodyHref }}"
-            data-menu-option-body
-            {{- if $disableBody }} aria-disabled="true" data-menu-body-disabled="true" tabindex="-1" aria-current="true"{{ end }}
+    <div class="gm-modal__body gm-ageGate__content">
+      <p class="gm-modal__hint">{{ i18n "menu.modal.hint" }}</p>
+      <ul class="gm-modal__options gm-menuModal__options" role="list">
+        {{- range $navigation }}
+          {{- $id := .id | default "" -}}
+          {{- $labelKey := .i18nKey | default .label | default "" -}}
+          {{- $label := cond (ne $labelKey "") (i18n $labelKey) "" -}}
+          {{- $href := .url | default "" | relLangURL -}}
+          {{- $targetId := .targetId | default "" -}}
+          {{- $targetAttr := .target | default "" -}}
+          {{- $bodyHref := cond (and $.IsHome (ne $targetId "")) (printf "#%s" $targetId) $href -}}
+          {{- $disableBody := and (not $.IsHome) (and (ne $id "") (eq $id $currentNavId)) -}}
+          {{- $isCurrent := $disableBody -}}
+          {{- $reopenWelcome := and $.IsHome (eq $id "about") -}}
+        <li>
+          <div
+            class="gm-modal__option gm-menuModal__option{{ if $isCurrent }} gm-modal__option--current gm-menuModal__option--current{{ end }}"
+            data-menu-option
+            data-menu-url="{{ $href }}"
+            {{- if $targetId }} data-menu-target="{{ $targetId }}"{{ end }}
+            {{- if $reopenWelcome }} data-menu-reset-storage="gm_age_mode" data-menu-open-modal="ageGate"{{ end }}
+            {{- if $disableBody }} aria-disabled="true"{{ end }}
+            {{- if $isCurrent }} data-menu-active="true" data-menu-active-label="{{ i18n "lang.modal.current" }}"{{ end }}
           >
-            <span class="gm-modal__optionLabel">{{ $label }}</span>
-            {{- if $isCurrent }}
-              <span class="gm-modal__badge gm-menuModal__badge">{{ i18n "lang.modal.current" }}</span>
-            {{- end }}
-          </a>
-          {{- if $.IsHome }}
             <a
-              class="gm-modal__optionIcon"
-              href="{{ $href }}"
-              data-menu-option-link
-              {{- if $targetAttr }} target="{{ $targetAttr }}"{{ end }}
-              aria-label="{{ printf "%s: %s" (i18n "menu.option.open") $label }}"
+              class="gm-modal__optionBody"
+              href="{{ $bodyHref }}"
+              data-menu-option-body
+              {{- if $disableBody }} aria-disabled="true" data-menu-body-disabled="true" tabindex="-1" aria-current="true"{{ end }}
             >
-              ↗
+              <span class="gm-modal__optionLabel">{{ $label }}</span>
+              {{- if $isCurrent }}
+                <span class="gm-modal__badge gm-menuModal__badge">{{ i18n "lang.modal.current" }}</span>
+              {{- end }}
             </a>
-          {{- end }}
-        </div>
-      </li>
-      {{- end }}
-    </ul>
+            {{- if $.IsHome }}
+              <a
+                class="gm-modal__optionIcon"
+                href="{{ $href }}"
+                data-menu-option-link
+                {{- if $targetAttr }} target="{{ $targetAttr }}"{{ end }}
+                aria-label="{{ printf "%s: %s" (i18n "menu.option.open") $label }}"
+              >
+                ↗
+              </a>
+            {{- end }}
+          </div>
+        </li>
+        {{- end }}
+      </ul>
+    </div>
   </div>
 </div>
 {{- end -}}
