--- a/themes/InterDead/layouts/stories/single.html
+++ b/themes/InterDead/layouts/stories/single.html
@@ -2,7 +2,10 @@
 <article class="gm-section gm-article">
   <div class="gm-container">
     <header class="gm-article__header">
-      <h1 class="gm-section__title gm-section__title--prefixed">{{ .Title }}</h1>
+      <div class="gm-storyHeader__title">
+        <h1 class="gm-section__title gm-section__title--prefixed">{{ .Title }}</h1>
+        {{ partial "components/medium-typology-trigger.html" . }}
+      </div>
       {{ with .Date }}
       <p class="gm-text--fine">{{ .Format "02 Jan 2006" }}</p>
       {{ end }}
@@ -14,7 +17,8 @@
         {{ partial "components/article-toc.html" (dict "toc" $toc) }}
       {{ end }}
       <div class="gm-card gm-article__body gm-content">
-        {{ .Content }} {{ partial "story/meta.html" . }}
+        {{ partial "story/mediums.html" . }}
+        {{ .Content }}
       </div>
     </div>
   </div>
