--- a/themes/InterDead/layouts/partials/header.html
+++ b/themes/InterDead/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <header class="gm-header">
   <div class="gm-container gm-header__bar">
     <div class="gm-header__logo" data-header-logo>
-        <a class="gm-header__logoLink" href="{{ "/" | relLangURL }}" aria-label="{{ i18n "header.wordmark" }}">
+        <div class="gm-header__logoLink">
           {{- $logo := resources.Get "images/logo_png.png" | fingerprint -}}
           <img
             src="{{ $logo.RelPermalink }}"
@@ -11,7 +11,7 @@
             integrity="{{ $logo.Data.Integrity }}"
             crossorigin="anonymous"
           />
-        </a>
+        </div>
     </div>
     <div class="gm-header__wordmark">
       <button
