--- a/themes/InterDead/layouts/_default/baseof.html
+++ b/themes/InterDead/layouts/_default/baseof.html
@@ -9,6 +9,7 @@
     {{ partial "menu-modal.html" . }}
     {{ partial "age-gate.html" . }}
     {{ partial "components/medium-typology-modal.html" . }}
+    {{ partial "components/profile-delete-info-modal.html" . }}
     {{ partial "components/article-toc-script.html" . }}
     {{- $scriptAsset := .Scratch.Get "interdeadScript" -}}
     {{- if $scriptAsset -}}
