--- a/themes/InterDead/layouts/profile/list.html
+++ b/themes/InterDead/layouts/profile/list.html
@@ -30,9 +30,19 @@
               <div class="gm-profile__row">
                 <dt class="gm-profile__label" data-i18n="profile.fields.profileId">{{ i18n "profile.fields.profileId" }}</dt>
                 <dd class="gm-profile__value" data-profile-id></dd>
-                <button class="gm-button gm-button--danger gm-profile__delete" data-profile-delete data-i18n="profile.delete">
-                  {{ i18n "profile.delete" }}
-                </button>
+                <div class="gm-profile__actions">
+                  <button class="gm-button gm-button--danger gm-profile__delete" data-profile-delete data-i18n="profile.delete">
+                    {{ i18n "profile.delete" }}
+                  </button>
+                  <button
+                    class="gm-profile__infoButton"
+                    type="button"
+                    data-modal-trigger="profile-delete-info"
+                    aria-label="{{ i18n "profile.delete.infoTrigger" }}"
+                  >
+                    <span aria-hidden="true">?</span>
+                  </button>
+                </div>
               </div>
             </dl>
           </div>
