--- a/themes/InterDead/layouts/index.html
+++ b/themes/InterDead/layouts/index.html
@@ -83,7 +83,7 @@
   </section>
   <section class="gm-section gm-heroNote">
     <div class="gm-container">
-      <p class="gm-heroNote__text">{{ i18n "hero.afterText" }}</p>
+      <p class="gm-heroNote__text gm-note--centered">{{ i18n "hero.afterText" }}</p>
     </div>
   </section>
   {{ partial "widgets/stories.html" . }}
