--- a/themes/InterDead/layouts/shortcodes/ticker.html
+++ b/themes/InterDead/layouts/shortcodes/ticker.html
@@ -18,7 +18,7 @@ default .title -}} {{- end -}} {{- if and $key (not ($seen.Get $key)) -}} {{- $s
     <div class="gm-sponsors__inner">
       <div class="gm-ticker" data-ticker>
         {{- if $noteText -}}
-        <div class="gm-ticker__note">{{ $noteText }}</div>
+        <div class="gm-ticker__note gm-note--centered">{{ $noteText }}</div>
         {{- end -}}
         <div class="gm-ticker__viewport" data-ticker-viewport>
           <div class="gm-ticker__track" data-ticker-track>
