--- a/themes/InterDead/layouts/partials/footer.html
+++ b/themes/InterDead/layouts/partials/footer.html
@@ -4,7 +4,9 @@
     "https://interdead.fandom.com/ru/wiki/Interdead_%D0%92%D0%B8%D0%BA%D0%B8" "uk"
     "https://interdead.fandom.com/uk/wiki/Main_Page" "ja"
     "https://interdead.fandom.com/ja/wiki/InterDead_Wiki" -}} {{- $fandomURL := default (index
-    $fandomLinks "en") (index $fandomLinks .Site.Language.Lang) -}}
+    $fandomLinks "en") (index $fandomLinks .Site.Language.Lang) -}} {{- $discordUrl :=
+    .Site.Params.social.discord | default "https://discord.gg/vAWYg3jFEp" -}} {{- $telegramUrl
+    := .Site.Params.social.telegram | default "https://t.me/inter_dead" -}}
     <div class="gm-footer__inner">
       <div class="gm-footer__note" data-show="adult">
         <p class="gm-text--fine">{{ i18n "footer.adult" }}</p>
@@ -33,14 +35,10 @@
           <a class="gm-footer__link" href="{{ $fandomURL }}" target="_blank" rel="noopener"
             >Fandom</a
           >
-          <a
-            class="gm-footer__link"
-            href="https://discord.gg/vAWYg3jFEp"
-            target="_blank"
-            rel="noopener"
+          <a class="gm-footer__link" href="{{ $discordUrl }}" target="_blank" rel="noopener"
             >Discord</a
           >
-          <a class="gm-footer__link" href="https://t.me/InterDeadCom" target="_blank" rel="noopener"
+          <a class="gm-footer__link" href="{{ $telegramUrl }}" target="_blank" rel="noopener"
             >Telegram</a
           >
         </div>
