--- a/themes/InterDead/layouts/_default/baseof.html
+++ b/themes/InterDead/layouts/_default/baseof.html
@@ -16,6 +16,7 @@
       src="https://zhovten-games.github.io/InterDeadProto/src/infrastructure/bootstrap/index.js"
       data-interdead-embed="launcher"
       data-interdead-src="https://zhovten-games.github.io/InterDeadProto/index.html"
+      data-interdead-assets-base="https://zhovten-games.github.io/InterDeadProto/assets/"
     ></script>
     {{- $scriptAsset := .Scratch.Get "interdeadScript" -}}
     {{- if $scriptAsset -}}
